--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -13,18 +13,5 @@
  * always omit, customize, or replace this behavior with SASS, SCSS,
  * or any other Grunt tasks you like.)
  */
-
-
-
-// For example:
-//
-// @import 'variables/colors.less';
-// @import 'mixins/foo.less';
-// @import 'mixins/bar.less';
-// @import 'mixins/baz.less';
-//
-// @import 'styleguide.less';
-// @import 'pages/login.less';
-// @import 'pages/signup.less';
-//
-// etc.
+@import '../../node_modules/bootstrap/less/bootstrap.less';
+@import 'forms.less';
