--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 <head>
   <title>Music Tribe</title>
-
-  <!-- Viewport mobile tag for sensible mobile support -->
+  <meta charset="utf-8">
+  <base href="/">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="">
 
   <!--
       Stylesheets and Preprocessors
