Remove extra jumbotron

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,10 +1,10 @@
 <div class="jumbotron">
-  <div class="jumbotron">
-    <div class="container">
-      <h1>Music Tribe tag line about our product and why it's so good.</h1>
-      <p>Additional line about Music Tribe</p>
-      <p><a class="btn btn-primary btn-lg" href="/register" role="button">Register</a></p>
-      <p><a class="btn btn-info btn-lg" href="/login" role="button">Login</a></p>
-    </div>
+  <div class="container">
+    <h1>Music Tribe tag line about our product and why it's so good.</h1>
+    <p>Additional line about Music Tribe</p>
+    <p>
+      <a class="btn btn-primary btn-lg" href="/register" role="button">Register</a>
+    </p>
+    <p><a class="btn btn-info btn-lg" href="/login" role="button">Login</a></p>
   </div>
 </div>
