Add bootstrap, jquery to depency architecture

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -109,6 +109,8 @@
 -->
 
 <!--SCRIPTS-->
+<script src="/js/dependencies/jquery.js"></script>
+<script src="/js/dependencies/bootstrap.js"></script>
 <script src="/js/enable-javascript.js"></script>
 <!--SCRIPTS END-->
 </body>
