--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,18 +1,32 @@
-<div class="container">
-  <form class="form" method="POST" action="/register">
-    <legend>Register</legend>
-    <% include _csrf.ejs %>
-    <div class="form-group">
-      <label for="email" class="form-label"><%= __('Email') %></label>
-      <input type="email" id="email" name="email" class="form-control">
+<div class="container container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-offset-3 col-sm-6">
+      <form class="form" method="POST" action="/register" autocomplete="on">
+        <legend>Register</legend>
+        <% include _csrf.ejs %>
+        <div class="form-group">
+          <label for="email" class="form-label"><%= __('Email') %></label>
+          <input type="email" id="email" name="email" class="form-control">
+        </div>
+        <div class="form-group col-xs-12 col-sm-6">
+          <div class="row">
+            <label for="firstName" class="form-label"><%= __('First Name') %></label>
+            <input type="text" id="firstName" name="firstName" class="form-control">
+          </div>
+        </div>
+        <div class="form-group col-xs-12 col-sm-6">
+            <label for="lastName" class="form-label"><%= __('Last Name') %></label>
+            <input type="text" id="lastName" name="lastName" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="password" class="form-label"><%= __('Password') %></label>
+          <input type="password" id="password" name="password" class="form-control" autocomplete="off">
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-default"><%= __('Submit') %></button>
+        </div>
+        <% include _form-errors.ejs %>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="password" class="form-label"><%= __('Password') %></label>
-      <input type="password" id="password" name="password" class="form-control">
-    </div>
-    <div class="form-group">
-      <button type="submit" class="btn btn-default"><%= __('Submit') %></button>
-    </div>
-    <% include _form-errors.ejs %>
-  </form>
+  </div>
 </div>
