--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,14 @@
 <div class="container">
   <h1>This is the user's dashboard</h1>
+
+  <h2>Upload a song</h2>
+  <form class="form" method="POST" action="/file" enctype="multipart/form-data">
+    <div class="form-group">
+      <input id="song" name="song" type="file" placeholder="Add Song" multiple="multiple">
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Upload</button>
+    </div>
+  </form>
+
 </div>
