--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,7 +2,7 @@
   <h1>This is the user's dashboard</h1>
 
   <div class="row">
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12">
       <h2>Upload Assets</h2>
       <form class="form" method="POST" action="/file" enctype="multipart/form-data">
         <div class="form-group">
@@ -13,18 +13,22 @@
         </div>
       </form>
     </div>
-    <div class="col-xs-12 col-sm-6">
+    <section class="col-xs-12 asset-list">
       <h2>Current Assets</h2>
-      <% if(artistsAssets) { %>
-      <ul>
-        <% for(var i = 0; i < artistsAssets.length; i++) { %>
-        <li>
-          <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
-          <a href="<%= artistsAssets[i].url %>"><%= artistsAssets[i].fileName %></a>
-        </li>
-        <% } %>
-      </ul>
+      <% if (artistsAssets.length) { %>
+      <% for(var i = 0; i < artistsAssets.length; i++) { %>
+      <% var asset = artistsAssets[i]; %>
+      <% if(i % 4 === 0) { %>
+      <%- '<div class="row">' %>
       <% } %>
-    </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <%- include artist-asset.ejs %>
+      </div>
+      <% if(i % 4 === 3) { %>
+      <%- '</div>' %>
+      <% } %>
+      <% } %>
+      <% } %>
+    </section>
   </div>
 </div>
