- Add fontawesome - Add bootstrap social buttons - Move auth related end points back into an AuthController

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -14,5 +14,9 @@
  * or any other Grunt tasks you like.)
  */
 @import '../../node_modules/bootstrap/less/bootstrap.less';
+@import '../../node_modules/font-awesome/less/font-awesome.less';
+@import '../../node_modules/bootstrap-social/bootstrap-social.less';
 @import 'forms.less';
 @import 'assets.less';
+@import 'buttons.less';
+@import 'login.less';
