--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,35 @@
-<div class="container">
+<div class="container login">
   <div class="row">
-    <div class="col-xs-12 col-sm-offset-3 col-sm-6">
-      <form class="form" method="POST" action="/signin">
-        <legend>Login</legend>
-        <% include _csrf.ejs %>
-        <div class="form-group">
-          <label for="email" class="form-label"><%= __('Email') %></label>
-          <input type="email" id="email" name="email" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="password" class="form-label"><%= __('Password') %></label>
-          <input type="password" id="password" name="password" class="form-control">
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-default"><%= __('Login') %></button>
-        </div>
-        <% include _form-errors.ejs %>
-      </form>
+    <div class="col-xs-12 col-sm-offset-3 col-sm-5">
+      <h1 class="login__title"><%- __('Log In') %></h1>
+      <div class="login__social">
+        <a href="#" class="btn btn-block btn-social btn-facebook">
+          <i class="fa fa-facebook"></i>
+          <%- __('Facebook') %>
+        </a>
+      </div>
+      <div class="login__separator">
+        <hr/>
+        <div class="text-center"><%- __('or') %></div>
+        <hr/>
+      </div>
+      <div class="login__local">
+        <form class="form" method="POST" action="/auth/local">
+          <% include _csrf.ejs %>
+          <div class="form-group">
+            <label for="email" class="form-label"><%- __('Email') %></label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="<% __('name@email.com') %>">
+          </div>
+          <div class="form-group">
+            <label for="password" class="form-label"><%- __('Password') %></label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="<% __('password') %>">
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary"><%- __('Log In') %></button>
+          </div>
+          <% include _form-errors.ejs %>
+        </form>
+      </div>
     </div>
   </div>
 </div>
