Remove all reference to glyphicons

--- a/views/artist-asset.ejs
+++ b/views/artist-asset.ejs
@@ -25,15 +25,15 @@
         <% if (asset.type === 'image/jpeg' ||
           asset.type === 'image/gif' ||
           asset.type === 'image/png') { %>
-        <span class="glyphicon glyphicon-camera"></span>
+        <span class="fa fa-picture-o"></span>
         <% } else if ( asset.type === 'audio/mp3' ) { %>
-        <span class="glyphicon glyphicon-music"></span>
+        <span class="fa fa-music"></span>
         <% } else if ( asset.type === 'video/mp4' ) { %>
-        <span class="glyphicon glyphicon-facetime-video"></span>
+        <span class="fa fa-video-camera"></span>
         <% } %>
       </div>
       <div class="col-xs-6 asset__social">
-        <a href="#"><span class="glyphicon glyphicon-heart"></span></a>
+        <a href="#"><span class="fa fa-heart"></span></a>
       </div>
     </div>
   </footer>
