--- a/views/artist-asset.ejs
+++ b/views/artist-asset.ejs
@@ -1,4 +1,4 @@
-<article class="asset panel panel-default">
+<article class="asset panel panel-primary">
   <header class="asset__header panel-heading">
     <%- asset.fileName %>
   </header>
