--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-offset-3 col-sm-5">
       <h1 class="login__title"><%- __('Log In') %></h1>
       <div class="login__social">
-        <a href="#" class="btn btn-block btn-social btn-facebook">
+        <a href="/auth/facebook" class="btn btn-block btn-social btn-facebook">
           <i class="fa fa-facebook"></i>
           <%- __('Facebook') %>
         </a>
